# pindb

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  DEPLOY.md  Dockerfile  README.md  alembic.ini  compile_tailwind.ps1  conftest.py  docker-compose.dev.yaml  docker-compose.yaml  docker-entrypoint.sh  package-lock.json  package.json  prek.toml  pyproject.toml  run.ps1  test.html  test.sqlite  tsconfig.json  vite.config.ts
.cursor/rules/: windows-powershell.mdc
.github/workflows/: ci.yml  release.yml
.pi/: models.json
alembic/: env.py
alembic/versions/: 127d6f92bb88_add_blacklisted_names.py  1474a714bc0b_initial.py  49abc5a26a29_reconcile_drift_created_at_not_null_.py  78b0f6a1ac52_add_theme_to_user.py  8ec5d4451612_add_messages_and_message_receipts.py  91298792a7b1_add_pay_for_production_to_fundingtype_.py  957a10c31cfe_add_user_stats_and_achievements.py  96659d4bb506_add_pin_variants_and_unauthorized_copies.py  a1b2c3d4e5f6_partial_unique_name_indexes.py  a3f8b2c91d4e_add_audit_fields_and_change_log.py  a5b6c7d8e9f0_oauth_provider_meta_and_verified.py  a7f3c21e9b04_index_join_table_reverse_columns.py  b2c3d4e5f6a7_add_pending_edits.py  b7c3d4e5f6a2_add_editor_role_and_pending_state.py  b8c0d1e2f3a4_add_user_dimension_unit.py  c0d1e2f3a4b5_backfill_created_at_nulls.py  c1d2e3f4a5b6_track_implied_by_on_pins_tags.py  c9d4e5f6a7b8_tag_overhaul.py  d1e2f3a4b5c6_unknown_defaults.py  d2e3f4a5b6c7_normalize_tag_names.py  d3e4f5a6b7c8_add_normalized_name_columns.py  d4e5f6a7b8c9_tag_aliases_unique_per_tag.py  d8e2f10b47c3_add_rejection_reason.py  dd2ee36584ee_add_user_collection_tables.py  e2f3a4b5c6d7_add_tag_description.py  e3f4a5b6c7d8_add_shop_and_artist_aliases.py  e5f6a7b8c9d0_artist_shop_aliases_unique_per_entity.py  f3a4b5c6d7e8_add_tag_aliases.py  f4a5b6c7d8e9_add_bulk_id_columns.py  fc8470c7fd18_add_user_displays_and_content_reports.py
docs/: CI_FIX.md  GITHUB_CI_ERRORS.md  ISSUES.md  docstrings.md  ux-improvements.md
frontend/: mount.ts
frontend/islands/: admin-users.entry.ts  bulk-import.entry.ts  bulk-tag.entry.ts  confirm-modal.entry.ts  delete-account-modal.entry.ts  display-editor.entry.ts  grades-editor.entry.ts  links-editor.entry.ts  multi-select.entry.ts  pin-images.entry.ts  report-modal.entry.ts  request-changes-modal.entry.ts  tradeable-row.entry.ts
frontend/lib/: Dropdown.svelte  MultiSelect.svelte  define-island.ts  form-persist.ts  globals.d.ts  toast.ts  webp.ts
scripts/: README.md  _pindb_webp_entry.mjs  _tune-muted-contrast.mjs  bootstrap.sh  build-webp-encode.mjs  check-theme-contrast.mjs  deploy.sh  dev.ps1  dev.sh  dump_db.py  fix_async_routes.py  import_csv.py  migrate_data.py  migrate_images.py  pindb.service  start.sh  vendor.mjs
scripts/lucide/: build-lucide.mjs
scripts/simple-icons/: generate-brand-icons.mjs
src/pindb/: __init__.py  achievements.py  asset_cache_buster.py  audit_events.py  auth.py  blacklist.py  config.py  csrf.py  file_handler.py  htmx_toast.py  http_caching.py  lifespan.py  log.py  markdown_utils.py  model_utils.py  og_image.py  password_policy.py  rate_limit.py  security_headers.py  utils.py
tests/: README.md  conftest.py
tests/e2e/: __init__.py  _pages.py  conftest.py  island_helpers.py  screenshots.py  select_helpers.py  test_bulk_tag_creation.py  test_concurrent.py  test_entity_create_forms.py  test_flows.py  test_oauth_flows.py  test_password_flow.py  test_pending_chain.py  test_pin_creation.py  test_pin_form_validation.py  test_ui_content.py  test_visibility_matrix.py
tests/factories/: artist.py  base.py  currency.py  grade.py  pending_edit.py  pin.py  pin_set.py  shop.py  tag.py  user.py
tests/fixtures/: __init__.py  _meili.py  _pg.py  app_lifecycle.py  autouse.py  clients.py  core.py  database.py  e2e_users.py  images.py  search.py  users.py
tests/helpers/: binary_fixtures.py  passwords.py
tests/integration/: conftest.py  test_account_erasure.py  test_account_linking.py  test_admin_routes.py  test_admin_users.py  test_auth_password_policy.py  test_auth_routes.py  test_blacklist.py  test_bulk_edit.py  test_bulk_pin.py  test_bulk_tag.py  test_change_log.py  test_collection.py  test_content_reports.py  test_delete_routes.py  test_editor_role.py  test_entity_crud.py  test_erasure_displays.py  test_favorites.py  test_http_caching.py  test_image_routes.py  test_list_routes.py  test_messages.py  test_name_check.py  test_needs_changes.py  test_oauth_flow.py  test_page_smoke.py  test_pending_approval.py  test_pending_edits.py  test_pin_crud.py  test_pin_grid_eager_loading.py  (+15 more)
(+424 files in other folders)
