[project]
name = "pindb"
version = "0.1.0"
description = "A database for pins."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "htpy>=25.8.1",
    "polars>=1.34.0",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1", "pindb", "pytest>=8.4.1"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pindb"]

[tool.uv.sources]
pindb = { workspace = true }
