[project]
name = "pindb"
version = "0.1.0"
description = "A database for pins."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.1",
    "argon2-cffi>=25.1.0",
    "authlib>=1.6.9",
    "babel>=2.17.0",
    "fastapi[standard]>=0.116.1",
    "htpy>=25.8.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "markdown-it-py>=4.0.0",
    "meilisearch>=0.38.0",
    "nh3>=0.3.4",
    "pillow>=12.0.0",
    "polars>=1.34.0",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "Faker>=30.0.0",
    "factory-boy>=3.3.0",
    "ipykernel>=6.30.1",
    "pindb",
    "pytest>=8.4.1",
    "pytest-env>=1.1.3",
    "testcontainers[postgres]>=4.8.0",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"
testpaths = ["tests"]
env = [
    "DATABASE_CONNECTION=postgresql+psycopg://placeholder:placeholder@localhost/placeholder",
    "MEILISEARCH_KEY=test-meili-key",
    "MEILISEARCH_URL=http://localhost:7700",
    "SECRET_KEY=test-secret-key-for-pytest-only",
    "IMAGE_DIRECTORY=/tmp/pindb_test_images",
]
markers = [
    "unit: fast tests, no I/O (DB or network)",
    "integration: tests requiring real PostgreSQL via testcontainers",
    "meili: tests requiring a real Meilisearch container",
    "slow: tests that are slow by nature",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pindb"]

[tool.uv.sources]
pindb = { workspace = true }
