[project]
name = "pindb"
version = "0.1.3beta"
description = "A database for pins."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.1",
    "argon2-cffi>=25.1.0",
    "authlib>=1.6.9",
    "babel>=2.17.0",
    "fastapi[standard]>=0.116.1",
    "htpy>=25.8.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "markdown-it-py>=4.0.0",
    "meilisearch>=0.38.0",
    "nh3>=0.3.4",
    "boto3>=1.38.0",
    "pillow>=12.0.0",
    "polars>=1.34.0",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "limits>=3.13.0",
    "sqlalchemy>=2.0.43",
    "zxcvbn>=4.5.0",
]

[dependency-groups]
dev = [
    "Faker>=30.0.0",
    "bs4>=0.0.2",
    "factory-boy>=3.3.0",
    "ipykernel>=6.30.1",
    "pindb",
    "pytest>=8.4.1",
    "pytest-env>=1.1.3",
    "pytest-playwright>=0.5.0",
    "pytest-xdist>=3.8.0",
    "testcontainers[postgres]>=4.8.0",
]

[tool.pytest.ini_options]
# e2e tests require Playwright browsers + Docker (Postgres + Meilisearch
# testcontainers). Skip them locally with `pytest -m "not e2e"` if the host
# lacks those; CI runs the full suite.
addopts = ["--import-mode=importlib"]
pythonpath = "src"
testpaths = ["tests"]
env = [
    "DATABASE_CONNECTION=postgresql+psycopg://placeholder:placeholder@localhost/placeholder",
    "MEILISEARCH_KEY=test-meili-key",
    "MEILISEARCH_URL=http://localhost:7700",
    "SECRET_KEY=test-secret-key-for-pytest-only",
    "IMAGE_DIRECTORY=/tmp/pindb_test_images",
    "SESSION_COOKIE_SECURE=false",
    "CSRF_ENFORCE_ORIGIN=false",
    "CONTACT_EMAIL=test@example.com",
]
markers = [
    "unit: fast tests, no I/O (DB or network)",
    "integration: tests requiring real PostgreSQL via testcontainers",
    "meili: tests requiring a real Meilisearch container",
    "slow: tests that are slow by nature",
    "e2e: browser-level end-to-end tests (Playwright, live uvicorn + real containers)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pindb"]

[tool.uv.sources]
pindb = { workspace = true }
